--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <p>
       <h3>Please enter the following:</h3>
       <form action="javascript:enterClicked()">
-        <label for="fname">First Name</label>
-        <input type="text" id="first-name" placeholder="First Name"><br><br>
-        <label for="age">Age</label>
-        <input type="number" id="age-entered" placeholder="Age"><br><br>
+        <label for="fname">Street Name</label>
+        <input type="text" id="street-name" placeholder="Street Name"><br><br>
+        <label for="number">Street number</label>
+        <input type="number" id="number-entered" placeholder="Number"><br><br>
         <input type="submit" value="Enter">
       </form>
     </p>
@@ -31,3 +31,4 @@
     </div>
   </body>
 </html>
+
