edited it to work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="User Input, with JavaScript">
     <meta name="keywords" content="immaculata, ics2o">
-    <meta name="author" content="P.J. Lobetti">
+    <meta name="author" content="PJ Lobetti">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="./fav/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png">
@@ -20,9 +20,9 @@
       <h3>Please enter the following:</h3>
       <form action="javascript:enterClicked()">
         <label for="fname">Street Name</label>
-        <input type="text" id="street-name" placeholder="Street Name"><br><br>
-        <label for="number">Street number</label>
-        <input type="number" id="number-entered" placeholder="Number"><br><br>
+        <input type="text" id="first-name" placeholder="Street name"><br><br>
+        <label for="age">Address</label>
+        <input type="number" id="age-entered" placeholder="Address"><br><br>
         <input type="submit" value="Enter">
       </form>
     </p>
@@ -31,4 +31,3 @@
     </div>
   </body>
 </html>
-
